--- a/minimal/minimal-quote.html
+++ b/minimal/minimal-quote.html
@@ -48,6 +48,18 @@
 <script>
 
 quotes=[
+"不逼自己一把，你怎么知道自己有多优秀。",
+"静坐常思己过，闲谈莫论人生。",
+"立志在坚不欲锐，成功在久不在速。",
+"我要坚守我的目标永不动摇，我要努力奋斗成为我想成为的人。",
+"曾经说没有你我怎么办，可是你离开后我还是一样坚强的活着。",
+"没有理想的人，就如一张白纸，寻找理想的人，就如一道彩虹。",
+"一个不欣赏自己的人，是难以快乐的。",
+"对的，坚持；错的，放弃！",
+"没有人，会把你所有缺点包容。",
+"努力不一定能实现一切，但它能告诉你，你最远到哪里。",
+"人生不是用来讨好别人的，而是要善待自己。",
+"对的，坚持；错的，放弃！",
 "Learning, like success, is anything but a linear process",
 "I am in competition with no one. I have no desire to play the game of being better than anyone. I am simply trying to be better than the person I was yesterday.",
 "If you want to be interesting, you have to be interested.",
